# protettoratoTest

./: .gitignore  Cargo.toml  Cargo.toml.backup  Dockerfile  README.md
.devcontainer/: devcontainer.json
backend/: .Cargo.toml.swp  Cargo.toml  Cargo.toml.backup  Dockerfile  README.md
backend/src/: main.rs
backend/src/auth/: mod.rs
frontend/: Cargo.toml
