[package]
name = "protettorato-backend"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.8.6", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
dotenvy = "0.15"