cargo-features = ["unstable-editions"]

[package]
# ... rest of your Cargo.toml

[package]
name = "protettorato-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "10.0"
reqwest = { version = "0.12", features = ["json"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
